--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -14,7 +14,8 @@
       "conflict": "您的帐号在其它地方登录，您已被迫下线。",
       "confirm": "是否确定要执行此操作？",
       "success": "操作成功。",
-      "fail": "操作失败。"
+      "fail": "操作失败。",
+      "unknown": "未知错误。"
     },
     "operation": {
       "add": "新建",
@@ -25,7 +26,8 @@
       "reset": "重置",
       "reload": "重新加载",
       "forward": "前进",
-      "back": "后退"
+      "back": "后退",
+      "cancel": "取消"
     },
     "dialog": {
       "title": "消息",
@@ -120,17 +122,14 @@
         "unread": "未读",
         "markas": "标记为",
         "receive": "接收"
-      },
-      "menu": {
-        "basic": "基础信息",
-        "role": "角色管理",
-        "user": "用户管理"
       }
     }
   },
   "routes": {
     "basic": {
+      "title": "系统",
       "role": {
+        "title": "角色管理",
         "name": "角色名",
         "remark": "备注",
         "menu": "权限",
@@ -144,6 +143,7 @@
         }
       },
       "user": {
+        "title": "用户管理",
         "name": "用户名",
         "account": "账号",
         "role": "角色",
