feat:添加表格的列调整功能，优化表格界面内容

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -27,7 +27,8 @@
       "reload": "Reload",
       "forward": "Forward",
       "back": "Back",
-      "cancel": "Cancel"
+      "cancel": "Cancel",
+      "personalize": "Personalize"
     },
     "dialog": {
       "title": "Infomation",
