fix:修改prompt的描述及参数格式

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -32,6 +32,7 @@
     },
     "dialog": {
       "title": "Infomation",
+      "edit": "Edit",
       "ok": "Ok",
       "cancel": "Cancel",
       "yes": "Yes",
